Shifts component background and stopwatch to black

--- a/src/css/stopwatch.css
+++ b/src/css/stopwatch.css
@@ -9,7 +9,7 @@
 
 button {
     background: #fff;
-    color: #000;
+    /* color: #000; */
     border: none;
     padding: 1rem 2rem;
     font-size: 1.5rem;
