--- a/src/index.css
+++ b/src/index.css
@@ -57,8 +57,9 @@ code {
   border-radius: 5px;
   padding: 1rem;
   margin: 1rem;
-  background-color: rgba(243, 243, 243, 0.4);
-  color: rgb(0, 0, 0);
+  /* background-color: rgba(243, 243, 243, 0.4); */
+  /* color: rgb(0, 0, 0); */
+  background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
   width: 400px;
 }
